objects/Logs__c.object
<CustomObject>
    <fields>
        <fullName>Advocate_used_for__c</fullName>
        <label>Advocate used for</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Seminar/Event Speaker</fullName>
                </value>
                <value>
                    <fullName>Product Feedback</fullName>
                </value>
                <value>
                    <fullName>Quote/Testimonial</fullName>
                </value>
                <value>
                    <fullName>User Review</fullName>
                </value>
                <value>
                    <fullName>Webinar Speaker</fullName>
                </value>
                <value>
                    <fullName>Success Story</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Blogger</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advocates__c</fullName>
        <label>Advocates</label>
        <referenceTo>Advocates__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                    <default>true</default>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Difference__c</fullName>
        <formula>IF(
 (
TODAY()- DATEVALUE(CreatedDate)  &lt;= 30),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difference_w_f__c</fullName>
        <label>Difference(w/f)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Logs</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>